src/tui/widgets/snapshots/patui__tui__widgets__text_display__tests__select_text-2.snap
---
source: src/tui/widgets/text_display.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 10 },
    content: [
        "┌──────────────────Block Title───────────────────┐",
        "│                                                │",
        "│  Here's some non-selectable text               │",
        "│  without much 1                                │",
        "│  Hello, World!                                 │",
        "│  Here's some more selectable text              │",
        "│  that is separated by other                    │",
        "│  non-selectable text 1                         │",
        "│                                                │",
        "└────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 5, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 29, y: 6, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
    ]
}
